# mts_105_team

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml  test_controller.py
a105_bringup/: CMakeLists.txt  maps.txt  package.xml
a105_bringup/launch/: 3d_simca.launch.py  a105.launch.py  hardware.launch.py  imu.launch.py  itog.launch.py  navigation.launch.py  simca.launch.py  tf.launch.py
a105_bringup/rviz/: 3d_simca.rviz  3d_simca2.rviz  3d_simca3.rviz  rpi.rviz  simca.rviz
a105_cobra_driver/: CMakeLists.txt  package.xml
a105_cobra_driver/config/: cobra.yaml
a105_cobra_driver/launch/: cobra.launch.py
a105_cobra_driver/src/: cmdvel_to_cobra.cpp
a105_cobra_py/: package.xml  setup.cfg  setup.py
a105_cobra_py/a105_cobra_py/: cmdvel_to_cobra.py
a105_cobra_py/resource/: a105_cobra_py
a105_controller/: CMakeLists.txt
a105_controller/src/: sender.cpp
a105_custom_slam/: CMakeLists.txt  package.xml
a105_custom_slam/config/: segment_grid_mapper.yaml
a105_custom_slam/src/: ekf_navigator.cpp  segment_grid_mapper.cpp
a105_description/: CMakeLists.txt  package.xml
a105_description/src/: tf_broadcaster.cpp
a105_imu/: CMakeLists.txt  package.xml
a105_imu/config/: imu.yaml
a105_imu/launch/: imu.launch.py  launch.py  raw_launch.py  tc_launch.py
a105_imu/src/: Makefile  README_src.md  epson_imu_spi_ros2_node.cpp  epson_imu_uart_ros2_node.cpp  hcl.h  hcl_gpio.c  hcl_gpio.h  hcl_gpio_rpi.c  hcl_rpi.c  hcl_spi.h  hcl_spi_rpi.c  hcl_uart.c  hcl_uart.h  imu_node.cpp  main_csvlogger.c  main_helper.c  main_helper.h  main_screen.c  sensor_epsonCommon.h  sensor_epsonSpi.c  sensor_epsonUart.c
a105_imu_spi_term/: CMakeLists.txt  package.xml
a105_imu_spi_term/src/: mpu6500_term_node.cpp
a105_imu_yes/: CMakeLists.txt  package.xml
a105_imu_yes/config/: imu_params.yaml
a105_imu_yes/launch/: imu.launch.py
a105_imu_yes/src/: imu_node.cpp
a105_leash/: CMakeLists.txt  package.xml
a105_leash/src/: rgbd_to_cmd.cpp
a105_leash_top/: package.xml  setup.cfg  setup.py
a105_leash_top/a105_leash_top/: edge_depth_to_scan.py  rgbd_to_cmd.py  stenka.py
a105_leash_top/launch/: depth_proc.launch.py
a105_leash_top/outadted/: rgbd_to_cmd copy 2.py  rgbd_to_cmd copy 3.py  rgbd_to_cmd copy.py
a105_leash_top/resource/: a105_leash_top
a105_lidar/: CMakeLists.txt  package.xml
a105_lidar/config/: ld19.yaml
a105_lidar/launch/: ld19.launch.py
a105_lidar/src/: ld19_to_laserscan.cpp  ld19_to_scan.cpp
a105_mpu6500_spi_driver/: CMakeLists.txt  package.xml
a105_mpu6500_spi_driver/config/: mpu6500_spi.yaml
a105_mpu6500_spi_driver/launch/: mpu6500_spi.launch.py
a105_mpu6500_spi_driver/src/: mpu6500_spi_node.cpp
a105_mpu6500_spi_py/: package.xml  setup.cfg  setup.py
a105_mpu6500_spi_py/a105_mpu6500_spi_py/: mpu6500_spi_node.py
a105_mpu6500_spi_py/config/: mpu6500_spi.yaml
a105_mpu6500_spi_py/launch/: mpu6500_spi.launch.py
a105_navigation/: CMakeLists.txt  package.xml
a105_navigation/config/: ekf_params.yaml  ekf_params_gpt.yaml  nav2_entire.yaml
a105_navigation/launch/: ekf.launch.py
a105_navigation/src/: nav2_goal_client.cpp
a105_path_planner/: CMakeLists.txt  package.xml
a105_path_planner/config/: nav2_params.yaml
a105_path_planner/launch/: go.launch.py  path_planner_nav2.launch.py
a105_path_planner/src/: nav2_goal_client.cpp
a105_webots_bridge/: CMakeLists.txt  package.xml
a105_webots_bridge/src/: 3d_webots_bridge_node.cpp  bil.cpp  webots_bridge_node.cpp
a105_webots_controller/: CMakeLists.txt  package.xml
a105_webots_controller/launch/: controller_105.launch.py
docker/arm64/: Dockerfile
ess_imu_driver2-jazzy/ess_imu_driver2-jazzy/: CMakeLists.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
ros2_laser_scan_matcher/src/: laser_scan_matcher.cpp
rosbag/rosbag2_2025_10_27-18_47_11/: metadata.yaml  rosbag2_2025_10_27-18_47_11_0.db3
rosbag/rosbag2_2025_10_27-18_51_18/: metadata.yaml  rosbag2_2025_10_27-18_51_18_0.db3
rosbag/rosbag2_2025_10_27-18_53_11/: metadata.yaml  rosbag2_2025_10_27-18_53_11_0.db3
rosbag/rosbag2_camera/: metadata.yaml
rosbag/rosbag2_lidar/: metadata.yaml  (+1 more)
rosbag2_2025_10_29-22_17_18/: metadata.yaml
scripts/: prep_rpi.bash  simulate_controller.py  test_controller.py  test_controller.sh
segment_grid_localizer/: CMakeLists.txt  package.xml
udp_controller/: udp_diff.py
udp_dich/: udp_diff.py
(+91 files in other folders)
