<?xml version="1.0"?>
<package format="3">
  <name>a105_cobra_driver</name>
  <version>0.0.1</version>
  <description>cmd_vel → Cobra Flex JSON over serial</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
