<?xml version="1.0"?>
<package format="3">
  <name>a105_mpu6500_spi_py</name>
  <version>0.1.0</version>
  <description>MPU6500 over spidev publisher</description>
  <maintainer email="team105@example.com">team105</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-spidev</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
