<?xml version="1.0"?>
<package format="3">
  <name>a105_webots_controller</name>
  <version>0.0.1</version>
  <description>a105_webots_controller: send cmd_vel data </description>
  <maintainer email="robotics@innopolis.university">mobile</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
